--- a/src/components/LeftSidebar/leftSidebar.module.css
+++ b/src/components/LeftSidebar/leftSidebar.module.css
@@ -168,7 +168,7 @@ details[open] > .navGroupTitle {
 
 /* Language Switcher for tablet screens (800px-1200px) */
 .languageSwitcherTablet {
-  padding: var(--space-6x) var(--space-6x) 0 var(--space-6x);
+  padding: var(--space-6x) 0;
   display: none;
 }
 
