fix directory header

--- a/src/components/CCIP/Hero/Hero.css
+++ b/src/components/CCIP/Hero/Hero.css
@@ -5,6 +5,8 @@
 
 .ccip-hero__heading {
   color: var(--gray-900);
+  font-size: 2.5rem;
+  margin-bottom: var(--space-6x);
 }
 
 .ccip-hero__content {
@@ -14,4 +16,11 @@
   justify-content: center;
   align-items: center;
   gap: var(--space-4x);
+}
+
+@media screen and (max-width: 768px) {
+  .ccip-hero__heading {
+    font-size: 2rem;
+    margin-bottom: var(--space-4x);
+  }
 }
