--- a/src/components/ChangelogSnippet/ChangelogCard.module.css
+++ b/src/components/ChangelogSnippet/ChangelogCard.module.css
@@ -14,7 +14,7 @@
   }
 
   & .card {
-    padding: var(--space-6x);
+    padding: var(--space-4x);
   }
 }
 
@@ -99,6 +99,15 @@
   flex: 1;
 }
 
+/* Networks and Topic Section */
+.networksAndTopicSection {
+  display: flex;
+  align-items: center;
+  gap: var(--space-3x);
+  margin-bottom: var(--space-4x);
+  flex-wrap: wrap;
+}
+
 /* Content Footer */
 .contentFooter {
   position: absolute;
@@ -181,8 +190,8 @@
 
 @media screen and (max-width: 768px) {
   .card {
-    padding: var(--space-4x);
-    gap: var(--space-4x);
+    padding: 0 !important;
+    gap: 0;
     flex-direction: column;
   }
 
@@ -220,6 +229,7 @@
 
   .copyButton {
     width: 32px;
+    opacity: 1;
   }
 }
 
