--- a/src/pages/changelog/[...id].astro
+++ b/src/pages/changelog/[...id].astro
@@ -85,7 +85,14 @@ const pageTitle = `Changelog and Releases | ${CONFIG.SITE.title}`
     </div>
 
     <div class="changelog-content">
-      <ChangelogCard item={log} showBorder={false} autoExpand={true} showCopyButton={false} disableHover={true} />
+      <ChangelogCard
+        showNetworksAndTopic
+        item={log}
+        showBorder={false}
+        autoExpand={true}
+        showCopyButton={false}
+        disableHover={true}
+      />
     </div>
   </main>
 </BaseLayout>
