--- a/src/pages/changelog/[...id].astro
+++ b/src/pages/changelog/[...id].astro
@@ -102,12 +102,11 @@ const pageTitle = `Changelog and Releases | ${CONFIG.SITE.title}`
     max-width: 1264px;
     width: 100%;
     margin: 0 auto;
-    padding: 100px 0;
+    padding: 100px var(--space-6x);
   }
 
   .changelog-header {
-    margin-bottom: var(--space-8x);
-    padding: 0 var(--space-6x);
+    margin-bottom: var(--space-16x);
   }
 
   .back-link {
