--- a/src/components/ChangelogFilters/styles.module.css
+++ b/src/components/ChangelogFilters/styles.module.css
@@ -1,9 +1,74 @@
 .wrapper {
-  background: red;
+  background: #252e42e6;
+  border-radius: var(--space-8x);
   max-width: 492px;
   width: 100%;
   margin: 0 auto;
   position: fixed;
-  bottom: 0;
+  bottom: var(--space-4x);
   height: 56px;
+  z-index: 11;
+  left: 0;
+  right: 0;
+
+  padding: var(--space-2x);
+  backdrop-filter: blur(2px);
+  -webkit-backdrop-filter: blur(2px);
+}
+
+.content {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.btn {
+  border-radius: var(--space-8x);
+  padding: 0 var(--space-4x);
+  color: var(--gray-300);
+  display: flex;
+  transition: all 0.1s ease;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  &:hover {
+    background-color: #252e42;
+  }
+
+  & span {
+    margin-right: var(--space-2x);
+    font-size: 16px;
+    display: block;
+  }
+}
+
+.searchInputWrapper.expanded {
+  width: 100%;
+  grid-column-end: span 4;
+}
+
+.searchIcon {
+  width: 22px;
+  height: 22px;
+}
+
+.searchInputWrapper {
+  background-color: #252e42;
+  display: flex;
+  padding: var(--space-2x) var(--space-3x);
+  border-radius: var(--space-8x);
+  align-items: center;
+  gap: var(--space-2x);
+  transition: all 0.1s ease;
+}
+
+.searchInput {
+  background: transparent;
+  color: var(--gray-300);
+  font-size: 14px;
+  &::placeholder {
+    color: var(--gray-400);
+    font-style: normal;
+  }
 }
