--- a/src/pages/changelog.astro
+++ b/src/pages/changelog.astro
@@ -7,6 +7,7 @@ import { getSecret } from "astro:env/server"
 import { searchClient, SearchClient } from "@algolia/client-search"
 import { ChangelogItem } from "~/components/ChangelogSnippet/types"
 import ChangelogCard from "~/components/ChangelogSnippet/ChangelogCard.astro"
+import { getUniqueNetworks, getUniqueTopics, getUniqueTypes } from "~/utils/changelogFilters"
 const formattedContentTitle = `${CONFIG.PAGE.titleFallback} | ${CONFIG.SITE.title}`
 
 const appId = getSecret("ALGOLIA_APP_ID")
@@ -51,7 +52,10 @@ if (appId && apiKey) {
   logs = allHits
 }
 
-console.log(logs[0])
+// Extract unique filter values
+const products = logs ? getUniqueTopics(logs) : []
+const networks = logs ? getUniqueNetworks(logs) : []
+const types = logs ? getUniqueTypes(logs) : []
 ---
 
 <BaseLayout title={formattedContentTitle}>
@@ -84,7 +88,7 @@ console.log(logs[0])
       )
     }
 
-    <ChangelogFilters client:load />
+    <ChangelogFilters client:load products={products} networks={networks} types={types} items={logs || []} />
   </main>
 </BaseLayout>
 
