--- a/src/components/ChangelogFilters/styles.module.css
+++ b/src/components/ChangelogFilters/styles.module.css
@@ -1,16 +1,17 @@
 .wrapper {
   background: #252e42e6;
   border-radius: var(--space-8x);
-  max-width: 492px;
-  width: 100%;
+  max-width: 700px;
+  min-width: 492px;
+
   margin: 0 auto;
   position: fixed;
   bottom: var(--space-4x);
   height: fit-content;
   min-height: 56px;
   z-index: 11;
-  left: 0;
-  right: 0;
+  left: 50%;
+  transform: translateX(-50%);
 
   padding: var(--space-2x);
   backdrop-filter: blur(2px);
@@ -73,6 +74,7 @@
   align-items: center;
   gap: var(--space-2x);
   transition: all 0.1s ease;
+  min-width: 108px;
 }
 
 .searchInput {
@@ -94,6 +96,7 @@
   flex-direction: column;
   gap: var(--space-1x);
   margin-bottom: var(--space-2x);
+  border-bottom: 1px solid var(--gray-800);
 }
 
 .expandedContent::-webkit-scrollbar {
@@ -132,20 +135,16 @@
 }
 
 .pill:hover {
-  background-color: rgba(255, 255, 255, 0.05);
+  background-color: var(--gray-500);
 }
 
 .pillSelected {
   color: var(--white);
+  background-color: var(--gray-500);
 
   & span {
-    background-color: var(--gray-700);
     border-radius: var(--space-2x);
   }
-}
-
-.pillSelected:hover {
-  background-color: rgba(255, 255, 255, 0.05);
 }
 
 .btnActive {
