--- a/src/components/CCIP/Landing/Grid.css
+++ b/src/components/CCIP/Landing/Grid.css
@@ -1,11 +1,11 @@
-.networks__grid {
+.grid {
   display: grid;
   grid-template-columns: 1fr;
   gap: var(--space-2x);
 }
 
 @media (min-width: 992px) {
-  .networks__grid {
+  .grid {
     grid-template-columns: 1fr 1fr 1fr 1fr;
     gap: var(--space-6x);
   }
