Refactor card components to use a unified Card component and update styles for consistency

--- a/src/components/CCIP/Cards/Card.css
+++ b/src/components/CCIP/Cards/Card.css
@@ -1,4 +1,4 @@
-.token-card__container {
+.card__container {
   display: flex;
   padding: var(--space-6x);
   gap: var(--space-3x);
@@ -11,20 +11,20 @@
   will-change: background-color;
 }
 
-.token-card__container:hover {
+.card__container:hover {
   background-color: var(--gray-50);
 }
 
-.token-card__container object,
-.token-card__container object img {
+.card__container img,
+.card__container object,
+.card__container object img {
   width: var(--space-10x);
   height: var(--space-10x);
   margin-top: auto;
   margin-bottom: auto;
-  border-radius: 50%;
 }
 
-.token-card__container h3 {
+.card__container h3 {
   font-size: var(--space-4x);
   font-weight: var(--font-weight-medium);
   line-height: var(--space-6x);
@@ -32,22 +32,9 @@
   margin-bottom: var(--space-1x);
 }
 
-.token-card__container p {
+.card__container p {
   margin-bottom: 0;
   font-size: var(--space-3x);
   line-height: var(--space-5x);
   color: var(--gray-500);
-}
-
-.truncate {
-  white-space: nowrap; /* Prevent the text from wrapping to the next line */
-  overflow: hidden; /* Ensure content is clipped within the container */
-  text-overflow: ellipsis; /* Add ellipsis (…) when the text is truncated */
-  width: 200px; /* Adjust the width as needed */
-}
-
-@media (min-width: 992px) {
-  .token-card__container {
-    height: 124px;
-  }
 }
