Add AddButton component and integrate it into Chain and CCIP landing pages; include add icon SVG and update theme styles for consistency

--- a/src/components/CCIP/Chain/Chain.astro
+++ b/src/components/CCIP/Chain/Chain.astro
@@ -17,6 +17,7 @@ import ChainTokenGrid from "./ChainTokenGrid"
 import { generateChainStructuredData } from "~/utils/ccipStructuredData"
 import StructuredData from "~/components/StructuredData.astro"
 import { DOCS_BASE_URL } from "~/utils/structuredData"
+import AddButton from "~/components/CCIP/AddButton/AddButton.astro"
 
 interface Props {
   environment: Environment
@@ -128,14 +129,7 @@ const chainStructuredData = generateChainStructuredData(
         <h2>Tokens <span>({allTokens.length})</span></h2>
         {
           network.chainType !== "solana" && network.chainType !== "aptos" && (
-            <a class="button secondary" href="/ccip/tutorials/evm/token-manager#verifying-your-token">
-              <img
-                src="/assets/icons/plus.svg"
-                alt="Add"
-                style={{ width: "1em", height: "1em", marginRight: "0.5em", verticalAlign: "middle" }}
-              />
-              Add my token
-            </a>
+            <AddButton href="/ccip/tutorials/evm/token-manager#verifying-your-token" text="Add my token" />
           )
         }
       </div>
