--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -44,6 +44,10 @@
   --color-gray-90: var(--color-base-gray), 90%;
   --color-gray-95: var(--color-base-gray), 95%;
 
+  /* Tertiary color aliases (matches design system) */
+  --tertiary-border: #d1d6de;
+  --tertiary-foreground: #0e1119;
+
   --color-blue: var(--color-base-blue), 61%;
   --color-blue-dark: var(--color-base-blue-dark), 39%;
   --color-green: var(--color-base-green), 42%;
