--- a/src/components/CCIP/Landing/ccip-landing.astro
+++ b/src/components/CCIP/Landing/ccip-landing.astro
@@ -18,6 +18,7 @@ import LazyVerifierGrid from "../VerifierGrid/LazyVerifierGrid"
 import StructuredData from "~/components/StructuredData.astro"
 import { generateDirectoryStructuredData } from "~/utils/ccipStructuredData"
 import { DOCS_BASE_URL } from "~/utils/structuredData"
+import AddButton from "~/components/CCIP/AddButton/AddButton.astro"
 
 export type Props = {
   environment: Environment
@@ -82,7 +83,7 @@ const directoryStructuredData = generateDirectoryStructuredData(environment, net
     <div>
       <div class="ccip-heading">
         <h2>Tokens <span>({allTokens.length})</span></h2>
-        <a class="button secondary" href="/ccip/tutorials/evm/token-manager#verifying-your-token">Add my token</a>
+        <AddButton href="/ccip/tutorials/evm/token-manager#verifying-your-token" text="Add my token" />
       </div>
       <LazyTokenGrid tokens={allTokens} environment={environment} client:visible />
     </div>
@@ -139,7 +140,7 @@ const directoryStructuredData = generateDirectoryStructuredData(environment, net
       --doc-padding: var(--space-10x);
       padding-top: var(--doc-padding);
       padding-bottom: var(--doc-padding);
-      gap: var(--space-24x);
+      gap: var(--space-10x);
     }
   }
 </style>
