change the colors of the headers and heros to the new color

--- a/src/components/CCIP/ChainHero/ChainHero.css
+++ b/src/components/CCIP/ChainHero/ChainHero.css
@@ -1,5 +1,5 @@
 .ccip-chain-hero {
-  background-color: var(--gray-100);
+  background: var(--Page-Background-Alt);
   border-bottom: 1px solid var(--gray-200);
   min-height: 241px;
 }
