--- a/src/components/CCIP/Tables/Table.css
+++ b/src/components/CCIP/Tables/Table.css
@@ -139,6 +139,7 @@
   padding: var(--space-2x);
   color: var(--gray-900);
   margin-bottom: 0px;
+  background: var(--Page-Background-Alt);
 }
 
 .ccip-table__filters {
