--- a/src/components/CCIP/Hero/Hero.css
+++ b/src/components/CCIP/Hero/Hero.css
@@ -1,5 +1,5 @@
 .ccip-hero {
-  background-color: var(--gray-100);
+  background: var(--Page-Background-Alt);
   border-bottom: 1px solid var(--gray-200);
 }
 
